# scratch_slam

./: .gitignore  CMakeLists.txt  README.md  feature_based_slam_v1.cpp  feature_matching.cpp  icp_slam.cpp  icp_slam_v2.cpp  icp_slam_v3.cpp  my_ICP.cpp  my_ICP_v2.cpp  my_ICP_v3.cpp  my_feature_based_v0.cpp  online_ICP_slam_v0.cpp  online_feature_based_slam_v0.cpp  package.xml  pairwise_incremental_registration.cpp
deprecated/: feature_based_slam_v1.cpp
include/: feature_based_functions.h  functions.h
launch/: downsample.launch  online_Feature_Based_SLAM_bag.launch  online_ICP_slam_bag.launch  online_ICP_slam_hardware.launch  online_ICP_slam_simulation.launch  online_NDT_slam_bag.launch  play_EuRoC.launch
mav0/cam0/: sensor.yaml
mav0/cam1/: sensor.yaml
rviz/: slam_bag.rviz  slam_hardware.rviz  stereo_image_proc.rviz
src/: feature_based_functions.cpp  functions.cpp  ground_surface_estimation.cpp  my_ICP_v3.cpp  my_feature_based_v0.cpp  my_feature_based_v1.cpp  offline_Feature_Based_SLAM.cpp  offline_ICP_SLAM.cpp  online_Feature_Based_SLAM.cpp  online_ICP_SLAM.cpp  online_NDT_SLAM.cpp
src/nodes/: .pointcloud_proc.cpp.swp
utils/: euroc_add_camera_info.py  pointcloud_proc.cpp
