<package>
  <name>scratch_slam</name>
  <version>1.0.0</version>
  <description>Scratch SLAM</description>
  <author>Andre Ruas</author>
  <maintainer email="andreruas1@gmail.com">Andre Ruas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>


  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

</package>
